working with menu

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,21 +4,21 @@
     <item
         android:title="Settings"
         android:id="@+id/settings"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_name"
         />
 
     <item
         android:title="Help"
         android:id="@+id/help"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/help"
         />
 
     <item
         android:title="About"
         android:id="@+id/about"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/about"
         />
 
