--- a/app/src/main/res/layout/activity_single_book.xml
+++ b/app/src/main/res/layout/activity_single_book.xml
@@ -38,7 +38,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="TextView"
+                android:text="@string/something_went_wrong"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="45dp"
-                android:text="TextView"
+                android:text="@string/something_went_wrong"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/bookTitle" />
@@ -57,6 +57,7 @@
                 android:id="@+id/pages"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/something_went_wrong"
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +68,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:text="TextView"
+                android:text="@string/something_went_wrong"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/bookImage2"
                 app:layout_constraintTop_toBottomOf="@+id/authorName2" />
@@ -132,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
+                android:text="@string/something_went_wrong"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
