delete icon added

--- a/app/src/main/res/layout/activity_category_books.xml
+++ b/app/src/main/res/layout/activity_category_books.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllBooks">
+    tools:context=".BookCategory">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allBooksRecView"
@@ -29,5 +29,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/noBook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:visibility="gone"
+        android:text="@string/no_book_has_been_added"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
