permission and null problems resolved :D :D :D

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,6 @@
         android:id="@+id/lat_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/lat"
@@ -117,7 +116,6 @@
         android:id="@+id/lon_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/lon"
@@ -127,7 +125,6 @@
         android:id="@+id/altitude_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/altitude"
         app:layout_constraintTop_toTopOf="@+id/altitude" />
@@ -136,7 +133,6 @@
         android:id="@+id/accuracy_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/accuracy"
@@ -146,7 +142,6 @@
         android:id="@+id/speed_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/speed"
@@ -156,7 +151,6 @@
         android:id="@+id/update_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/updates"
@@ -166,9 +160,9 @@
         android:id="@+id/sensor_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
+        android:text="Using towers and WIFI"
         app:layout_constraintStart_toEndOf="@+id/sensor"
         app:layout_constraintTop_toTopOf="@+id/sensor" />
 
@@ -210,7 +204,6 @@
         android:id="@+id/address_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/address"
