working on showing the map

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Lon :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -36,7 +36,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Altitude :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -48,7 +48,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Speed :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -60,7 +60,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Accuracy :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -72,7 +72,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Address :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -84,7 +84,7 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Updates :"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -194,7 +194,7 @@
         android:id="@+id/divider"
         android:layout_width="409dp"
         android:layout_height="1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -211,15 +211,14 @@
 
     <Button
         android:id="@+id/new_way_points"
-        android:layout_width="230dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="new way point"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wayPoints" />
+        app:layout_constraintStart_toEndOf="@+id/way_points_value"
+        app:layout_constraintTop_toTopOf="@+id/wayPoints" />
 
     <TextView
         android:layout_width="110dp"
@@ -229,7 +228,7 @@
         android:textSize="18sp"
         android:textAllCaps="false"
         android:id="@+id/wayPoints"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="@+id/parent"/>
 
